Fixed spacing

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -3,4 +3,5 @@ $light-text-color: #d8d8d8;
 $card-background-color: #202022;
 $card-shadow-color: rgba(252, 223, 223, 0.2);
 $accent-color-gold: gold;
-$button-color-yellow: #fcdf60;
+$button-color-primary: #b9aa87;
+$button-color-secondary: #966892;
